--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@supabase/supabase-js": "^2.87.1",
     "chart.js": "^4.5.1",
     "mermaid": "^11.12.2",
-    "next": "16.0.6",
-    "react": "19.2.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "react-markdown": "^8.0.7",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0"
